# asygnal

./: Cargo.toml
.github/workflows/: CI.yml  ci.yml
src/: lib.rs  macros.rs  util.rs
src/once/: mod.rs
src/once/signal/: mod.rs  signal.rs  signal_set.rs  table.rs
src/once/unix/: mod.rs  signal.rs  signal_set.rs  table.rs
src/signal/: libc_polyfill.rs  mod.rs  signal.rs  signal_mask.rs  signal_set.rs
src/signal/set/: atomic.rs  mod.rs
src/unix/: libc_polyfill.rs  mod.rs  pipe.rs  signal.rs  signal_kind.rs  signal_mask.rs  signal_set.rs
