[package]
name = "asygnal"
version = "0.0.2"
authors = ["Nikolai Vazquez"]
license = "MIT OR Apache-2.0"
edition = "2018"
homepage = "https://github.com/nvzqz/asygnal"
repository = "https://github.com/nvzqz/asygnal"
documentation = "https://docs.rs/asygnal"
description = "[WIP] Async-first signal handling, such as ctrl-c."
keywords = ["async", "signal", "sigint", "ctrlc"]
categories = ["asynchronous", "concurrency"]
include = ["Cargo.toml", "src", "README*", "CHANGELOG*", "LICENSE*"]

[features]
default = ["once"]
once = []

[dependencies]
futures = { version = "0.3.1", optional = true }
tokio = { version = "0.2.11", default-features = false, features = ["io-driver"] }

[target.'cfg(unix)'.dependencies]
cfg-if = "0.1.10"
libc = "0.2.66"
mio = "0.6.15"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.8"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
